# LiDARChessBoard

./: .gitignore  CMakeLists.txt  command_args.cpp  config.yaml  main.cpp
dataset/chessboard/: 000.txt  001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  020.txt  021.txt  022.txt  023.txt
dataset/laser/: 000.txt  001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  020.txt  021.txt  022.txt  023.txt
result/: 000.ply  000.txt  001.ply  001.txt  003.ply  003.txt  004.ply  004.txt  005.ply  005.txt  006.ply  006.txt  007.ply  007.txt  008.ply  008.txt  009.ply  009.txt  010.ply  010.txt  011.ply  011.txt  012.ply  012.txt  013.ply  013.txt  014.ply  014.txt  015.ply  015.txt  016.ply  016.txt  017.ply  017.txt  018.ply  018.txt  019.ply  019.txt  020.ply  020.txt  (+6 more)
src/: command_args.cpp  command_args.h  main.cpp
